cotoami_desktop/ui/assets/css/app/_stock.scss
@use "../pico-customized" as pico;

section.stock {
  position: relative;

  .split-pane {
    height: 100%;
  }

  div.map {
    position: relative;

    button.change-split-orientation {
      position: absolute;
      top: 10px;
      left: 10px;
      z-index: 2;

      display: inline-flex;
      align-items: center;
      justify-content: center;

      width: 36px;
      height: 36px;
      padding: 0;

      border: 1px solid #{pico.$grey-100};
      border-radius: 999px;
      background-color: color-mix(
        in srgb,
        #fffdf7 92%,
        transparent
      );
      backdrop-filter: blur(2px);
      opacity: 0.7;

      &:hover {
        opacity: 1;
      }

      span.material-symbols {
        color: hsl(205, 20%, 32%);
        font-size: 24px;
      }
    }

    button.close-map {
      position: absolute;
      bottom: 0;
      left: 0;
      width: 30px;
      height: 26px;
      color: hsl(205, 20%, 32%);
      opacity: 0.6;

      &:hover {
        opacity: 1;
      }

      span.material-symbols {
        font-size: 24px;
      }
    }
  }
}

